syntax = "proto3";

option go_package = "github.com/vynquoc/common/api";

package api;

service OrdersService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc GetOrder(GetOrderRequest) returns (Order);
}

message GetOrderRequest {
  string orderID = 1;
  string customerID =2;
}

message Order {
  string ID = 1;
  string customerID = 2;
  string Status = 3;
  repeated Item Items = 4;
}

message Item {
  string ID = 1;
  string PriceID = 2;
  int32 Quantity = 3;
  string Name = 4;
}

message ItemsWithQuantity {
  string ID = 1;
  int32 Quantity = 2;
}

message CreateOrderRequest {
  string customerID = 1;
  repeated ItemsWithQuantity Items = 2;
}
